--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "7.4.3",
@@ -24,6 +25,7 @@
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^12.3.0",
     "ionicons": "^7.4.0",
+    "lucide-react": "^0.546.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
